# ut1-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: blocklist.rs  blocklist_multi.rs  error.rs  lib.rs  multibl.rs
